--- a/TMS/Views/Staff/Edit.cshtml
+++ b/TMS/Views/Staff/Edit.cshtml
@@ -17,33 +17,39 @@
 
 @if (id != null)
 {
-    <form asp-controller="staff" asp-action="edit" method="post">
-        <div>
-            <label>
-                ShortName:
-                <input placeholder="title" type="text" name="shortname" required value="@Model.ShortName" />
-            </label>
-        </div>
-        <div>
-            <label>
-                FullName
-                <input placeholder="title" type="text" name="fullname" required value="@Model.FullName" />
-            </label>
-        </div>
-        <div>
-            <label>
-                Select Role
-                <select name="role" required>
-                    @foreach (var item in Enum.GetValues(typeof(TMS.Models.EmployeeRole)).Cast<TMS.Models.EmployeeRole>())
-                    {
-                        <option value="@((int)item + 1)" selected="@(Model.Role.Id.Equals((int)item + 1))">@item.ToString()</option>
-                    }
-                </select>
-            </label>
-        </div>
-        <input type="hidden" name="employyeId" value="@Model.Id" />
-        <input class="btn" type="submit" value="Update" />
-    </form>
+<form asp-controller="staff" asp-action="edit" method="post">
+    <div>
+        <label>
+            ShortName:
+            <input placeholder="ShortName" type="text" name="shortname" required value="@Model.ShortName" />
+        </label>
+    </div>
+    <div>
+        <label>
+            FullName
+            <input placeholder="FullName" type="text" name="fullname" required value="@Model.FullName" />
+        </label>
+    </div>
+    <div>
+        <label>
+            E-mail
+            <input placeholder="E-mail" type="text" name="email" required value="@Model.Email" />
+        </label>
+    </div>
+    <div>
+        <label>
+            Select Role
+            <select name="role" required>
+                @foreach (var item in Enum.GetValues(typeof(TMS.Models.EmployeeRole)).Cast<TMS.Models.EmployeeRole>())
+                {
+                    <option value="@((int)item + 1)" selected="@(Model.Role != null && Model.Role.Id.Equals((int)item + 1))">@item.ToString()</option>
+                }
+            </select>
+        </label>
+    </div>
+    <input type="hidden" name="employyeId" value="@Model.Id" />
+    <input class="btn" type="submit" value="Update" />
+</form>
 
     <form asp-controller="staff" asp-action="delete" method="post">
         <input type="hidden" name="employyeId" value="@Model.Id" />
