--- a/TMS/Views/Staff/Detailed.cshtml
+++ b/TMS/Views/Staff/Detailed.cshtml
@@ -28,5 +28,8 @@
             <td>@((EmployeeRole)Model.Role.Name)</td>
         </tr>
     </table>
-    <a class="btn task-add noselect" asp-controller="staff" asp-action="edit" asp-route-id="@Model.Id">Edit</a>
+    @if (User.IsInRole("Admin"))
+    {
+        <a class="btn task-add noselect" asp-controller="staff" asp-action="edit" asp-route-id="@Model.Id">Edit</a>
+    }
 }
