--- a/TMS/Views/Tasks/Index.cshtml
+++ b/TMS/Views/Tasks/Index.cshtml
@@ -13,15 +13,16 @@
 <h1>Tasks</h1>
 
 <table class="table">
-    <tr><td>Title</td><td>Assignee</td><td>Reporter</td><td>Status</td></tr>
+    <tr><td>Title</td><td>Assignee</td><td>Reporter</td><td>Priority</td><td>Status</td></tr>
     @foreach (var item in Model)
     {
-        <tr>
-            <td><a asp-controller="tasks" asp-action="detailed" asp-route-id="@item.Id">@item.Name</a></td>
-            <td>@item.Assignee.FullName</td>
-            <td>@item.Reporter.FullName</td>
-            <td>@item.Status</td>
-        </tr>
+    <tr>
+        <td><a asp-controller="tasks" asp-action="detailed" asp-route-id="@item.Id">@item.Name</a></td>
+        <td>@item.Assignee.FullName</td>
+        <td>@item.Reporter.FullName</td>
+        <td>@item.Priority</td>
+        <td>@item.Status</td>
+    </tr>
     }
 </table>
 
