new features for forms

--- a/TMS/Views/Account/Register.cshtml
+++ b/TMS/Views/Account/Register.cshtml
@@ -11,29 +11,29 @@
     <div class="validation" asp-validation-summary="ModelOnly" ></div>
     <div>
         <div class="form-group">
-            <label asp-for="FullName">Введите ФИО</label>
-            <input type="text" asp-for="FullName" />
-            <span asp-validation-for="FullName" ></span>
+            <label asp-for="FullName" class="control-label"></label>
+            <input asp-for="FullName" class="form-control" />
+            <span asp-validation-for="FullName" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="ShortName">Введите ShortName</label>
-            <input type="text" asp-for="ShortName" />
-            <span asp-validation-for="ShortName"></span>
+            <label asp-for="ShortName" class="control-label"></label>
+            <input asp-for="ShortName" class="form-control" />
+            <span asp-validation-for="ShortName" class="text-danger"></span>
         </div>
-        <div>
-            <label asp-for="Email">Введите Email</label><br />
-            <input type="text" asp-for="Email" />
-            <span asp-validation-for="Email"></span>
+        <div class="form-group">
+            <label asp-for="Email" class="control-label"></label>
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
-        <div>
-            <label asp-for="Password">Введите пароль</label><br />
-            <input asp-for="Password" />
-            <span asp-validation-for="Password"></span>
+        <div class="form-group">
+            <label asp-for="Password" class="control-label"></label>
+            <input asp-for="Password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
         </div>
-        <div>
-            <label asp-for="ConfirmPassword">Повторите пароль</label><br />
-            <input asp-for="ConfirmPassword" />
-            <span asp-validation-for="ConfirmPassword"></span>
+        <div class="form-group">
+            <label asp-for="ConfirmPassword" class="control-label"></label>
+            <input asp-for="ConfirmPassword" class="form-control" />
+            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
         <div>
             <input type="submit" value="Регистрация" />
