--- a/TMS/Views/Account/Login.cshtml
+++ b/TMS/Views/Account/Login.cshtml
@@ -12,14 +12,14 @@
     <div class="validation" asp-validation-summary="ModelOnly" ></div> 
     <div>
         <div class="form-group">
-            <label asp-for="Email">Введите Email</label>
-            <input type="text" asp-for="Email" />
-            <span asp-validation-for="Email" ></span>
+            <label asp-for="Email" class="control-label"></label>
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="Password">Введите пароль</label>
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" ></span>
+            <label asp-for="Password" class="control-label"></label>
+            <input asp-for="Password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
         </div>
         <div class="form-group">
             <input type="submit" value="Войти" class="btn btn-outline-dark" />
