Binding models added, client-side and server-side forms validation added

--- a/TMS/Views/Account/Login.cshtml
+++ b/TMS/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model TMS.ViewModels.LoginModel
+﻿@model TMS.ViewModels.LoginModel
 @{
     Layout = "_Layout";
 }
