--- a/TMS/Views/Account/Register.cshtml
+++ b/TMS/Views/Account/Register.cshtml
@@ -1,5 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model TMS.ViewModels.RegisterModel
+﻿@model TMS.ViewModels.RegisterModel
 @{
     ViewData["Title"] = "Register";
     Layout = "_Layout";
