--- a/TMS/Views/Tasks/Add.cshtml
+++ b/TMS/Views/Tasks/Add.cshtml
@@ -1,5 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using TMS.Models;
+﻿@using TMS.Models;
 @model IEnumerable<TMS.Models.Employees>
 @{
     ViewData["Title"] = "Add task";
