--- a/TMS/Views/Tasks/Index.cshtml
+++ b/TMS/Views/Tasks/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model IEnumerable<TMS.Models.QTask>
+﻿@model IEnumerable<TMS.Models.QTask>
 @{
     ViewData["Title"] = "Tasks";
     Layout = "_Layout";
