--- a/TMS/Views/Tasks/Detailed.cshtml
+++ b/TMS/Views/Tasks/Detailed.cshtml
@@ -1,5 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using TMS.Models;
+﻿@using TMS.Models;
 @model TMS.Models.QTask
 @{
     int? id = Model?.Id;
