refactoring and replacing any logic in views by adding viewmodels

--- a/TMS/Views/Tasks/Add.cshtml
+++ b/TMS/Views/Tasks/Add.cshtml
@@ -1,72 +1,45 @@
-﻿@using TMS.Models;
-@model IEnumerable<TMS.Models.Employees>
+﻿@model TMS.ViewModels.TaskAddModelHybrid
 @{
     ViewData["Title"] = "Add task";
     Layout = "_Layout";    
-    ViewBag.Reporter = Model.Where(u => u.FullName.Equals(User.Identity.Name)).FirstOrDefault().Id;
-    ViewBag.IsAdmin = User.IsInRole(EmployeeRole.Admin.ToString());
 }
-
 <div class="breadcrumbs">
     <a asp-controller="home" asp-action="index">Home</a> >
     <a asp-controller="tasks" asp-action="index">Tasks</a> >
     <span>Add task</span>
 </div>
-
 <h1>Add task</h1>
-
 <form asp-controller="tasks" asp-action="add" method="post">
     <div>
-        <label>
-            Title:
-            <input placeholder="title" type="text" name="title" required />
-        </label>
+        <label asp-for="Title" class="control-label"></label>
+        <input asp-for="Title" class="form-control" />
+        <span asp-validation-for="Title" class="text-danger"></span>
     </div>
     <div>
-        <label>
-            Description
-            <textarea placeholder="description" name="desc"></textarea>
-        </label>
+        <label asp-for="Description" class="control-label"></label>
+        <input asp-for="Description" class="form-control" />
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <div>
-        <label>
-            Select assignee
-            <select name="assigneeId" required>
-                @foreach (var item in Model)
-                {
-                    <option value="@item.Id">@item.FullName</option>
-                }
-            </select>
-        </label>
+        <label asp-for="AssigneeId" class="control-label"></label>
+        <select asp-for="AssigneeId" asp-items="@Model.AssigneeList"></select>
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     @if (ViewBag.IsAdmin)
     {
         <div>
-            <label>
-                Select reporter
-                <select name="reporterId" required>
-                    @foreach (var item in Model)
-                    {
-                        <option value="@item.Id">@item.FullName</option>
-                    }
-                </select>
-            </label>
+            <label asp-for="ReporterId" class="control-label"></label>
+            <select asp-for="ReporterId" asp-items="@Model.ReporterList"></select>
+            <span asp-validation-for="ReporterId" class="text-danger"></span>
         </div>
     }
     else
     {
-        <input type="hidden" name="reporterId" value="@ViewBag.Reporter" />
+        <input asp-for="ReporterId" type="hidden" value="@Model.ReporterId" />
     }
     <div>
-        <label>
-            Priority
-            <select name="priority" required>
-                @foreach (var item in Enum.GetValues(typeof(TMS.Models.TaskPriority)).Cast<TMS.Models.TaskPriority>())
-                {
-                    <option value="@((int)item)">@item.ToString()</option>
-                }
-            </select>
-        </label>
+        <label asp-for="Priority" class="control-label"></label>
+        <select asp-for="Priority" asp-items="@Model.PriorityList"></select>
     </div>
     <input type="submit" value="Create" />
 </form>
