--- a/TMS/Styles/main.scss
+++ b/TMS/Styles/main.scss
@@ -12,27 +12,18 @@
 }
 
 .btn {
-    align-items: center;
-    background-color: #ffffff;
+    background-color: #fff;
     border: 1px #000 solid;
-    color: #000;
-    cursor: pointer;
-    display: flex;
     font-family: sans-serif;
     font-size: 14px;
     height: 30px;
-    justify-content: center;
-    margin: 10px 0;
-    text-align: center;
     text-decoration: none;
-    width: 75px;
 
     &:hover {
         background-color: #eeeeee;
     }
 
     &:active {
-        font-size: 13px;
         background-color: #e0e0e0
     }
 }
