--- a/TMS/Views/Tasks/Detailed.cshtml
+++ b/TMS/Views/Tasks/Detailed.cshtml
@@ -1,9 +1,6 @@
-﻿@using TMS.Models;
-@model TMS.Models.QTask
+﻿@model TMS.Models.QTask
 @{
-    int? id = Model?.Id;
-    string title = (id == null) ? "Task" : $"Task#{id.ToString()}";
-    ViewData["Title"] = title;
+    ViewData["Title"] = Model.Name;
     Layout = "_Layout";
 }
 
@@ -13,19 +10,15 @@
     <span>Task details</span>
 </div>
 
-<h1>@title</h1>
-
-@if (id != null)
-{
-    <div>Task details</div>
-    <table class="table">
-        <tr><td>Title</td><td>Description</td><td>Priority</td><td>Status</td></tr>
-        <tr>
-            <td>@Model.Name</td>
-            <td>@Model.Description</td>
-            <td>@Model.Priority</td>
-            <td>@Model.Status</td>
-        </tr>
-    </table>
-    <a class="btn task-add noselect" asp-controller="tasks" asp-action="edit" asp-route-id="@Model.Id">Edit</a>
-}
+<h1>Task# @Model.Id</h1>
+<div>Task details</div>
+<table class="table">
+    <tr><td>Title</td><td>Description</td><td>Priority</td><td>Status</td></tr>
+    <tr>
+        <td>@Model.Name</td>
+        <td>@Model.Description</td>
+        <td>@Model.Priority</td>
+        <td>@Model.Status</td>
+    </tr>
+</table>
+<a class="btn task-add noselect" asp-controller="tasks" asp-action="edit" asp-route-id="@Model.Id">Edit</a>
