--- a/TMS/Views/Shared/_Layout.cshtml
+++ b/TMS/Views/Shared/_Layout.cshtml
@@ -1,30 +1,37 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="~/css/main.css" rel="stylesheet" />
-</head>
-<body>
-    <header>
-        <a class="logo" asp-controller="Home" asp-action="Index"></a>
-        @if (User.Identity.IsAuthenticated)
-        {
-            <div class="profile">
-                Logged as:
-                [@User.Identity.Name]
-                <a asp-controller="Account" asp-action="Logout">Log out</a>
-            </div>
-        }
-    </header>
-    <div class="container">
-        @RenderBody()
-    </div>
-    <footer>
-    </footer>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
-</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="apple-touch-icon" sizes="180x180" href="~/img/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="~/img/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="~/img/favicon/favicon-16x16.png">
+        <link rel="manifest" href="~/img/favicon/manifest.json">
+        <link rel="mask-icon" href="~/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="theme-color" content="#ffffff">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link href="~/css/main.css" rel="stylesheet" />
+        <title>@ViewBag.Title</title>
+    </head>
+    <body>
+        <header>
+            <a class="logo" asp-controller="Home" asp-action="Index"></a>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <div class="profile">
+                    Logged as:
+                    [@User.Identity.Name]
+                    <a asp-controller="Account" asp-action="Logout">Log out</a>
+                </div>
+            }
+        </header>
+        <div class="container">
+            @RenderBody()
+        </div>
+        <footer>
+        </footer>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
+    </body>
 </html>
