--- a/TMS/Views/Staff/Index.cshtml
+++ b/TMS/Views/Staff/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using TMS.Models;
-@model IEnumerable<TMS.Models.Employees>
+@model IEnumerable<Employees>
 @{
     ViewData["Title"] = "All Employees";
     Layout = "_Layout";
