--- a/TMS/Views/Staff/Add.cshtml
+++ b/TMS/Views/Staff/Add.cshtml
@@ -1,45 +1,34 @@
-﻿@{
+﻿@model TMS.ViewModels.StaffAddModelHybrid;
+@{
     ViewData["Title"] = "Add Employee";
     Layout = "_Layout";
 }
-
 <div class="breadcrumbs">
     <a asp-controller="home" asp-action="index">Home</a> >
     <a asp-controller="staff" asp-action="index">Employees</a> >
     <span>Add Employee</span>
 </div>
-
 <h1>Add Employee</h1>
-
 <form asp-controller="staff" asp-action="add" method="post">
     <div>
-        <label>
-            ShortName:
-            <input placeholder="ShortName" type="text" name="shortname" required />
-        </label>
+        <label asp-for="ShortName" class="control-label"></label>
+        <input asp-for="ShortName" class="form-control" />
+        <span asp-validation-for="ShortName" class="text-danger"></span>
     </div>
     <div>
-        <label>
-            FullName
-            <input placeholder="FullName" type="text" name="fullname" required />
-        </label>
+        <label asp-for="FullName" class="control-label"></label>
+        <input asp-for="FullName" class="form-control" />
+        <span asp-validation-for="FullName" class="text-danger"></span>
     </div>
     <div>
-        <label>
-            E-mail
-            <input placeholder="E-mail" type="text" name="email" required />
-        </label>
+        <label asp-for="Email" class="control-label"></label>
+        <input asp-for="Email" class="form-control" />
+        <span asp-validation-for="Email" class="text-danger"></span>
     </div>
     <div>
-        <label>
-            Select Role
-            <select name="role" required>
-                @foreach (var item in Enum.GetValues(typeof(TMS.Models.EmployeeRole)).Cast<TMS.Models.EmployeeRole>())
-                {
-                    <option value="@((int)item)">@item.ToString()</option>
-                }
-            </select>
-        </label>
+        <label asp-for="Role" class="control-label"></label>
+        <select asp-for="Role" asp-items="@Model.RoleList"></select>
+        <span asp-validation-for="Role" class="text-danger"></span>
     </div>
     <input class="btn" type="submit" value="Add" />
 </form>
