--- a/TMS/wwwroot/css/main.css
+++ b/TMS/wwwroot/css/main.css
@@ -34,3 +34,47 @@ table, tr, td {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain; }
+
+td[class^="task"] {
+  position: relative; }
+  td[class^="task"]:after {
+    display: block;
+    width: 20px;
+    height: 20px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 20px;
+    position: absolute;
+    right: 10px;
+    margin-top: -20px;
+    border-width: 1px;
+    border-style: solid;
+    box-sizing: content-box; }
+
+.task-priority-Major {
+  background-color: rgba(255, 0, 0, 0.1); }
+  .task-priority-Major:after {
+    content: '\21';
+    color: red;
+    border-color: red; }
+
+.task-status-New {
+  background-color: rgba(0, 255, 255, 0.1); }
+  .task-status-New:after {
+    content: '\26A0';
+    color: rgba(0, 0, 180, 0.5);
+    border-color: transparent; }
+
+.task-status-InProgress {
+  background-color: rgba(255, 255, 0, 0.1); }
+  .task-status-InProgress:after {
+    content: '\2694';
+    color: rgba(0, 180, 0, 0.5);
+    border-color: transparent; }
+
+.task-status-Done {
+  background-color: rgba(0, 255, 0, 0.1); }
+  .task-status-Done:after {
+    content: '\2713';
+    color: rgba(0, 0, 180, 0.5);
+    border-color: rgba(0, 0, 180, 0.5); }
