--- a/TMS/Views/Tasks/Add.cshtml
+++ b/TMS/Views/Tasks/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model TMS.ViewModels.TaskAddModelHybrid
+﻿@model TMS.ViewModels.Tasks.TaskAddModelHybrid
 @{
     ViewData["Title"] = "Add task";
     Layout = "_Layout";    
