--- a/TMS/Views/Tasks/Edit.cshtml
+++ b/TMS/Views/Tasks/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model TMS.ViewModels.TaskEditModelHybrid
+﻿@model TMS.ViewModels.Tasks.TaskEditModelHybrid
 @{
     ViewData["Title"] = "Edit task";
     Layout = "_Layout";
