--- a/TMS/Views/Tasks/Index.cshtml
+++ b/TMS/Views/Tasks/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model TMS.ViewModels.TaskIndexModel;
+﻿@model TMS.ViewModels.Tasks.TaskIndexModel;
 @{
     ViewData["Title"] = "Tasks";
     Layout = "_Layout";
