Static links replaced by tag-helpers

--- a/TMS/Views/Home/Index.cshtml
+++ b/TMS/Views/Home/Index.cshtml
@@ -1,10 +1,7 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Homepage";    
     Layout = "_Layout";
 }
-
 <h1>Homepage</h1>
-
-<div><a href="/tasks/">Задачи</a></div>
-<div><a href="/staff/">Сотрудники</a></div>
+<div><a asp-controller="tasks">Задачи</a></div>
+<div><a asp-controller="staff">Сотрудники</a></div>
